--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About</h2>
+          <h2>Sobre</h2>
           <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
         </div>
 
@@ -101,10 +101,9 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>29 Dec 1993</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Natal/RN, BR</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Data de aniversário:</strong> <span>29 Dec 1993</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>+55 8498734 8020</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Natal/RN, BR</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
